# ccdemo

./: .dockerignore  Cargo.toml  Makefile  README.md  config-connector.yaml  dbinstance.yaml  gcp-resources.yaml  k8s-resources.yaml  kcc-namespace.yaml
.github/workflows/: ghcr.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
operator-system/: configconnector-operator.yaml
services/pubber/: Cargo.toml  Dockerfile
services/pubber/src/: main.rs
services/subber/: Cargo.toml  Dockerfile
services/subber/src/: main.rs  pg.rs
services/webui/: Cargo.toml  Dockerfile
services/webui/src/: main.rs  pg.rs
src/: main.rs
