[package]
name = "webui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
common = { path = "../../crates/common" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "runtime"], default-features = false }
axum = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

